naming fixes and documentation

--- a/task1/report.ipynb
+++ b/task1/report.ipynb
@@ -74,7 +74,7 @@
     "The SincConv layer with the network architecture are implemented in [model.py](model.py).\n",
     "Note that the implementation allows the SincConv layer to accept an input with multiple channels, in contrast to the single-channel version proposed in the [original paper](https://arxiv.org/abs/1808.00158).\n",
     "A model can be fed to the trainer `train_model()` function in [trainer.py](trainer.py), which also handles dataset split into train and validation parts.\n",
-    "A dataset is loaded by a corresponding loader in [dataloader.py](dataloader.py).\n",
+    "A dataset is loaded by a corresponding loader in [dataset.py](dataset.py).\n",
     "In [main.py](main.py), one can schedule training tasks for various configs defined in [cfg/](cfg/).\n",
     "Overall pipeline is outlined in [nn_pipeline.pdf](nn_pipeline.pdf):\n",
     "\n",
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 1,
    "id": "77abc523",
    "metadata": {},
    "outputs": [],
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 2,
    "id": "51ebc60d",
    "metadata": {},
    "outputs": [],
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 3,
    "id": "3050fa55",
    "metadata": {
     "scrolled": false
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 4,
    "id": "4d903115",
    "metadata": {},
    "outputs": [
